[gd_scene load_steps=11 format=2]

[ext_resource path="res://client/menu/title/title_screen.gd" type="Script" id=1]
[ext_resource path="res://client/world/background/flappy_race_logo.png" type="Texture" id=2]
[ext_resource path="res://client/menu/title/title_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://client/audio/background.ogg" type="AudioStream" id=4]
[ext_resource path="res://client/fonts/DelaGothicOne-24.tres" type="DynamicFont" id=5]
[ext_resource path="res://client/menu/fade_in.tscn" type="PackedScene" id=6]
[ext_resource path="res://client/menu/setup/singleplayer/singleplayer_setup.tscn" type="PackedScene" id=7]
[ext_resource path="res://client/menu/options/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://client/menu/lobby/lobby.tscn" type="PackedScene" id=9]
[ext_resource path="res://client/menu/menu_button.tscn" type="PackedScene" id=10]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
singleplayer_scene = ExtResource( 7 )
multiplayer_scene = ExtResource( 9 )
options_scene = ExtResource( 8 )

[node name="PlayerContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitlePlayer1" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer2" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer3" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer4" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer5" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer6" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer7" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer8" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer9" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer10" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer11" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer12" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer13" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer14" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer15" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer16" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer17" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer18" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer19" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer20" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer21" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer22" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer23" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer24" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer25" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer26" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer27" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer28" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer29" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer30" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer31" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="TitlePlayer32" parent="PlayerContainer" instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 80.0
margin_right = -80.0
margin_bottom = -80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="MarginContainer"]
margin_right = 1120.0
margin_bottom = 560.0

[node name="Logo" type="TextureRect" parent="MarginContainer/Menu"]
margin_right = 1120.0
margin_bottom = 75.0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="MarginContainer/Menu"]
margin_right = 1120.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/Menu/CenterRow"]
margin_right = 1120.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="SingleplayerButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 140.0
margin_right = 1120.0
margin_bottom = 220.0
label = "Singleplayer"

[node name="MultiplayerButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 240.0
margin_right = 1120.0
margin_bottom = 320.0
label = "Multiplayer"

[node name="OptionsButton" parent="MarginContainer/Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 340.0
margin_right = 1120.0
margin_bottom = 420.0
label = "Options"

[node name="VersionLabel" type="Label" parent="MarginContainer/Menu"]
margin_right = 1120.0
margin_bottom = 560.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
text = "Version 420.69
Jibby Games"
valign = 2

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="MarginContainer/Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="finished" from="BGMusic" to="." method="_on_BGMusic_finished"]
